@@ -1,33 +1,29 @@
 package io.zmeu.Frontend.Parse;
 
-import io.zmeu.Frontend.Parser.Expressions.BinaryExpression;
-import io.zmeu.Frontend.Parser.Expressions.CallExpression;
-import io.zmeu.Frontend.Parser.Literals.Identifier;
-import io.zmeu.Frontend.Parser.Literals.StringLiteral;
-import io.zmeu.Frontend.Parser.Program;
-import io.zmeu.Frontend.Parser.Statements.BlockExpression;
-import io.zmeu.Frontend.Parser.Statements.ExpressionStatement;
-import io.zmeu.Frontend.Parser.Statements.LambdaExpression;
-import io.zmeu.Frontend.Parser.Statements.ReturnStatement;
 import lombok.extern.log4j.Log4j2;
 import org.junit.jupiter.api.Test;
 
 import java.util.Collections;
 import java.util.List;
 
+import static io.zmeu.Frontend.Parser.Expressions.BinaryExpression.binary;
+import static io.zmeu.Frontend.Parser.Expressions.CallExpression.call;
+import static io.zmeu.Frontend.Parser.Literals.StringLiteral.string;
+import static io.zmeu.Frontend.Parser.Program.program;
+import static io.zmeu.Frontend.Parser.Statements.BlockExpression.block;
+import static io.zmeu.Frontend.Parser.Statements.ExpressionStatement.expressionStatement;
+import static io.zmeu.Frontend.Parser.Statements.LambdaExpression.lambda;
+import static io.zmeu.Frontend.Parser.Statements.ReturnStatement.funReturn;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 @Log4j2
 public class LambdaTest extends BaseTest {
 
     @Test
-    void lambda() {
+    void lambdaSimple() {
         var res = parse("(x) -> x*x");
-        var expected = Program.of(
-                ExpressionStatement.of(
-                        LambdaExpression.of(List.of(Identifier.of("x")),
-                                BinaryExpression.binary("*", "x", "x")
-                        )
+        var expected = program(expressionStatement(
+                        lambda("x", binary("*", "x", "x"))
                 )
         );
         assertEquals(expected, res);
@@ -37,12 +33,8 @@ public class LambdaTest extends BaseTest {
     @Test
     void lambdaTwoArgs() {
         var res = parse("(x,y) -> x*y");
-        var expected = Program.of(
-                ExpressionStatement.of(
-                        LambdaExpression.of(List.of(Identifier.of("x"), Identifier.of("y")),
-                                BinaryExpression.binary("*", "x", "y")
-                        )
-                )
+        var expected = program(
+                expressionStatement(lambda("x", "y", binary("*", "x", "y")))
         );
         assertEquals(expected, res);
         log.info(toJson(res));
@@ -51,15 +43,10 @@ public class LambdaTest extends BaseTest {
     @Test
     void lambdaBlock() {
         var res = parse("(x,y) -> { x*y }");
-        var expected = Program.of(
-                ExpressionStatement.of(
-                        LambdaExpression.of(List.of(Identifier.of("x"), Identifier.of("y")),
-                                BlockExpression.block(
-                                        ExpressionStatement.of(
-                                                BinaryExpression.binary("*", "x", "y")
-                                        )
-                                )
-                        )));
+        var expected = program(
+                expressionStatement(
+                        lambda("x", "y", block(expressionStatement(binary("*", "x", "y"))))
+                ));
         assertEquals(expected, res);
         log.info(toJson(res));
     }
@@ -71,15 +58,10 @@ public class LambdaTest extends BaseTest {
                     return x*x
                 }
                 """);
-        var expected = Program.of(
-                ExpressionStatement.of(
-                        LambdaExpression.of(List.of(Identifier.of("x")),
-                                BlockExpression.block(
-                                        ReturnStatement.funReturn(
-                                                BinaryExpression.binary("*", "x", "x")
-                                        )
-                                )
-                        )));
+        var expected = program(expressionStatement(lambda("x", block(
+                        funReturn(binary("*", "x", "x"))
+                )
+        )));
         assertEquals(expected, res);
         log.info(toJson(res));
     }
@@ -91,13 +73,10 @@ public class LambdaTest extends BaseTest {
                     return
                 }
                 """);
-        var expected = Program.of(
-                ExpressionStatement.of(
-                        LambdaExpression.of(List.of(Identifier.of("x")),
-                                BlockExpression.block(
-                                        ReturnStatement.funReturn(ExpressionStatement.of())
-                                )
-                        )));
+        var expected = program(expressionStatement(lambda("x", block(
+                        funReturn(expressionStatement())
+                )
+        )));
         assertEquals(expected, res);
         log.info(toJson(res));
     }
@@ -108,11 +87,7 @@ public class LambdaTest extends BaseTest {
                 () -> { 
                 }
                 """);
-        var expected = Program.of(
-                ExpressionStatement.of(
-                        LambdaExpression.of(List.of(),
-                                BlockExpression.block()
-                        )));
+        var expected = program(expressionStatement(lambda(List.of(), block())));
         assertEquals(expected, res);
         log.warn(toJson(res));
     }
@@ -123,14 +98,8 @@ public class LambdaTest extends BaseTest {
                 ((x) -> x*x)(2) 
                                 
                 """);
-        var expected = Program.of(
-                ExpressionStatement.of(
-                        CallExpression.of(
-                                LambdaExpression.of(
-                                        List.of(Identifier.of("x")), BinaryExpression.binary("*", "x", "x")
-                                ),
-                                2
-                        )));
+        var expected = program(
+                expressionStatement(call(lambda("x", binary("*", "x", "x")), 2)));
         log.warn(toJson(res));
         assertEquals(expected, res);
     }
@@ -141,15 +110,9 @@ public class LambdaTest extends BaseTest {
                 ((x) -> x*x)(2)()
                                 
                 """);
-        var expected = Program.of(
-                ExpressionStatement.of(
-                        CallExpression.of(
-                                CallExpression.of(
-                                        LambdaExpression.of(
-                                                List.of(Identifier.of("x")), BinaryExpression.binary("*", "x", "x")
-                                        ),
-                                        2
-                                ), Collections.emptyList())
+        var expected = program(
+                expressionStatement(
+                        call(call(lambda("x", binary("*", "x", "x")), 2), Collections.emptyList())
                 ));
         log.warn(toJson(res));
         assertEquals(expected, res);
@@ -160,15 +123,9 @@ public class LambdaTest extends BaseTest {
         var res = parse("""
                 ((x) -> x*x)(2)("hi")
                 """);
-        var expected = Program.of(
-                ExpressionStatement.of(
-                        CallExpression.of(
-                                CallExpression.of(
-                                        LambdaExpression.of(
-                                                List.of(Identifier.of("x")), BinaryExpression.binary("*", "x", "x")
-                                        ),
-                                        2
-                                ), StringLiteral.of("hi"))
+        var expected = program(
+                expressionStatement(
+                        call(call(lambda("x", binary("*", "x", "x")), 2), string("hi"))
                 ));
         log.warn(toJson(res));
         assertEquals(expected, res);
